Update color palette. Add img & css directories.

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -19,10 +19,17 @@ $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
 $mq-ie: "all and (-ms-high-contrast: none), (-ms-high-contrast: active)";
 
 // Colors
-$primary: #b7a85c !default;
-$secondary: #43442b !default;
-$complementary: #485a73 !default;
-$white: #fff !default;
+$primary-500: hsl(215, 23%, 15%);
+$primary-400: hsl(215, 23%, 25%);
+$primary-300: hsl(215, 23%, 37%);
+$primary-200: hsl(215, 23%, 60%);
+$primary-100: hsl(215, 45%, 96%);
+$secondary-500: hsl(50, 45%, 12%);
+$secondary-400: hsl(50, 45%, 32%);
+$secondary-300: hsl(50, 39%, 54%);
+$secondary-200: hsl(50, 39%, 75%);
+$secondary-100: hsl(50, 39%, 97%);
+$white: hsl(0, 0%, 100%) !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -32,9 +39,9 @@ $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black: #000 !default;
+$black: hsl(0, 0%, 0%) !default;
 $disabled: #969696 !default;
-$blue: #007bff !default;
+$blue: #006be1 !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
