--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     padding: 2rem 1.5rem;
-    background-color: darken($complementary, 5%);
-    color: #fff;
+    background-color: $primary-400;
+    color: $primary-100;
     font-size: 1.2rem;
 
     p {
