--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,8 +11,7 @@ body {
     margin: 0px auto;
     width: 100%;
     box-sizing: border-box;
-    // background: $off-white;
-    // color: $primary-color;
+    color: $primary-500;
 }
 
 body {
