--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,8 +9,6 @@ body {
     font-size: $font-size-base-mobile;
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    // background-color: $gray-900;
-    // color: $white;
 
     @media #{$mq-medium} {
         font-size: $font-size-base;
@@ -23,12 +21,12 @@ h1 {
 }
 
 a {
-    color: darken($blue, 8%);
+    color: $blue;
     text-decoration: none;
     background-color: transparent;
 
     &:hover {
-        color: darken($blue, 8%);
+        color: $blue;
         text-decoration: underline;
     }
 }
@@ -86,7 +84,7 @@ section {
         padding-bottom: 2rem;
         margin-bottom: 3rem;
         margin-left: 2rem;
-        border-bottom: 5px solid $complementary;
+        border-bottom: 5px solid $primary-300;
 
         span {
             font-size: 60%;
