--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -118,7 +118,7 @@ $spacers: map-merge(
     }
 
     &-border {
-        border: 1px solid $complementary;
+        border: 1px solid $secondary-400;
         border-radius: 4px;
         padding: 1rem;
     }
