--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -77,7 +77,7 @@
     &__radio-button {
         height: 3rem;
         width: 3rem;
-        border: 5px solid $primary;
+        border: 5px solid $primary-300;
         border-radius: 50%;
         display: inline-block;
         position: absolute;
@@ -91,7 +91,7 @@
             width: 1.3rem;
             border-radius: 50%;
             @include absCenter;
-            background-color: $primary;
+            background-color: $primary-300;
             opacity: 0;
             transition: opacity 0.2s;
         }
