--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,7 +14,7 @@
 
 .preload {
     position: fixed;
-    background-color: $gray-600;
+    background-color: $primary-400;
     z-index: 9999999;
     height: 100%;
     width: 100%;
@@ -42,7 +42,7 @@
         position: absolute;
         height: 50%;
         width: 100%;
-        background-color: darken($complementary, 25%);
+        background-color: $primary-400;
 
         -webkit-transition: 0.7s all ease;
         -o-transition: 0.7s all ease;
@@ -66,7 +66,7 @@
         &-spinner {
             // width: 70px;
             // height: 70px;
-            // background-color: $primary;
+            // background-color: $primary-300;
 
             // border-radius: 100%;
             // -webkit-animation: sk-scaleout 1s infinite ease-in-out;
@@ -90,12 +90,12 @@
             display: block;
             width: 5rem;
             height: 5rem;
-            background-color: $primary;
-            border: 1px solid darken($primary, 5%);
+            background-color: $primary-300;
+            border: 1px solid $primary-400;
             border-radius: 4px;
             position: absolute;
             transition: all 0.3s ease-in-out;
-            background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $complementary 50%);
+            background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $primary-300 50%);
             background-size: 260%;
 
             &:hover {
@@ -197,17 +197,17 @@
         height: auto;
 
         &-profile {
-            height: 20rem;
-            width: 20rem;
+            height: 15rem;
+            width: 15rem;
             border-radius: 100%;
-            // border: 5px solid $primary;
-            // background-color: $primary;
+            // border: 5px solid $primary-300;
+            // background-color: $primary-300;
             display: block;
             margin: auto;
 
             @media #{$mq-medium} {
-                height: 30rem;
-                width: 30rem;
+                height: 20rem;
+                width: 20rem;
                 border-width: 10px;
             }
         }
@@ -222,7 +222,7 @@
         letter-spacing: 3px;
         font-size: 4rem;
         margin-bottom: 1rem;
-        color: $primary;
+        color: $secondary-300;
     }
 
     .subhead {
@@ -250,7 +250,7 @@ a.scroll-down {
 
 .fa-jedi-order {
     font-size: 5rem;
-    color: $primary;
+    color: $secondary-300;
 }
 
 #loader-wrapper {
@@ -339,7 +339,7 @@ a.scroll-down {
     top: 0;
     width: 51%;
     height: 100%;
-    background: darken($complementary, 15%);
+    background: $primary-500;
     z-index: 1000;
     -webkit-transform: translateX(0); /* Chrome, Opera 15+, Safari 3.1+ */
     -ms-transform: translateX(0); /* IE 9 */
