--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -4,12 +4,12 @@
         max-width: 100%;
         display: block;
         margin: auto;
-        border: 1px solid $complementary;
+        border: 1px solid $secondary-300;
         border-radius: 4px;
         padding: 1rem;
     }
     figure {
-        border: 1px solid $complementary;
+        border: 1px solid $secondary-300;
         border-radius: 4px;
         padding: 1rem;
 
@@ -20,7 +20,7 @@
     }
 
     a:not(.btn) {
-        color: darken($blue, 10%);
+        color: $blue;
 
         &:hover {
             text-decoration: underline;
