--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -10,13 +10,13 @@
                 padding: 0 0 0 3.25rem;
                 position: relative;
                 font-size: 1.6rem;
-                color: $complementary;
+                color: $primary-300;
                 transition: all 0.25s ease-in-out;
 
                 a {
                     &:link,
                     &:visited {
-                        color: $complementary;
+                        color: $primary-300;
                         border-bottom: 1px dotted;
                         text-transform: lowercase;
                         text-decoration: none;
@@ -27,13 +27,14 @@
                 &:hover {
                     transform: translateY(-3px);
                     text-shadow: 0 1px 1px rgba($black, 0.2);
+                    color: $primary-400;
                 }
             }
 
             i {
                 &.fab,
                 &.fas {
-                    border: 2px solid $complementary;
+                    border: 2px solid $primary-300;
                     border-radius: 100%;
                     height: 3rem;
                     width: 3rem;
