Update card, form, & header styles

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -248,7 +248,8 @@ a.scroll-down {
     transform: translateX(-50%);
 }
 
-.fa-jedi-order {
+.fa-jedi-order,
+.fa-galactic-republic {
     font-size: 5rem;
     color: $secondary-300;
 }
