--- a/css/style.css
+++ b/css/style.css
@@ -1155,30 +1155,32 @@ section h2 {
       background-color: #766a2d;
       border-color: #766a2d; }
 
-.card {
-  margin: 1rem;
-  border: 1px solid #495b74;
-  height: auto;
-  box-sizing: border-box;
+.mdc-card {
+  padding: 1rem;
+  margin: 1rem 1rem 4rem;
+  border-radius: 4px;
   background-color: white;
+  position: relative;
   display: flex;
-  flex-flow: column nowrap;
-  margin-bottom: 4rem; }
-  .card__header {
+  flex-flow: column nowrap; }
+  .mdc-card--outlined {
+    -webkit-box-shadow: 0px 2px 2px 1px #f8f9fa;
+    box-shadow: 0px 2px 2px 1px #f8f9fa;
+    border: 1px solid #dee2e6; }
+  .mdc-card--header {
     padding: 1.5rem;
     color: #495b74;
-    border-bottom: 1px solid #495b74; }
-  .card__body img {
+    border-bottom: 1px solid #dee2e6;
+    margin-bottom: 1rem; }
+  .mdc-card--body img {
     display: block;
-    max-width: 100%;
-    margin: auto; }
-  .card__footer {
-    border-top: 1px solid #495b74;
+    width: 100%;
+    margin: auto;
+    height: auto;
     padding: 1rem; }
-  @media screen and (min-width: 64em) {
-    .card {
-      margin-bottom: 4rem; } }
-  .card img {
+  .mdc-card--footer {
+    border-top: 1px solid #dee2e6;
+    margin-top: 1rem;
     padding: 1rem; }
 
 .content {
@@ -1242,7 +1244,7 @@ section h2 {
   color: inherit;
   padding: 1.5rem 2rem;
   border-radius: 0;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.75);
   border: none;
   border-bottom: 3px solid transparent;
   width: 100%;
@@ -1535,7 +1537,8 @@ a.scroll-down {
   left: 50%;
   transform: translateX(-50%); }
 
-.fa-jedi-order {
+.fa-jedi-order,
+.fa-galactic-republic {
   font-size: 5rem;
   color: #b7a85c; }
 
