--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,37 +1,41 @@
-.card {
-    margin: 1rem;
-    border: 1px solid $primary-300;
-    height: auto;
-    box-sizing: border-box;
+.mdc {
+
+  &-card {
+    padding: 1rem;
+    margin: 1rem 1rem 4rem;
+    border-radius: 4px;
     background-color: $white;
+    position: relative;
     display: flex;
     flex-flow: column nowrap;
-    margin-bottom: 4rem;
 
-    &__header {
-        padding: 1.5rem;
-        color: $primary-300;
-        border-bottom: 1px solid $primary-300;
+    &--outlined {
+      -webkit-box-shadow: 0px 2px 2px 1px $gray-100; 
+      box-shadow: 0px 2px 2px 1px $gray-100;
+      border: 1px solid $gray-300;
     }
 
-    &__body {
-        img {
-            display: block;
-            max-width: 100%;
-            margin: auto;
-        }
+    &--header {
+      padding: 1.5rem;
+      color: $primary-300;
+      border-bottom: 1px solid $gray-300;
+      margin-bottom: 1rem;
     }
 
-    &__footer {
-        border-top: 1px solid $primary-300;
+    &--body {
+      img {
+        display: block;
+        width: 100%;
+        margin: auto;
+        height: auto;
         padding: 1rem;
+      }
     }
 
-    @media #{$mq-medium} {
-        margin-bottom: 4rem;
+    &--footer {
+      border-top: 1px solid $gray-300;
+      margin-top: 1rem;
+      padding: 1rem;
     }
-
-    img {
-        padding: 1rem;
-    }
+  }
 }
