--- a/css/style.css
+++ b/css/style.css
@@ -1156,7 +1156,6 @@ section h2 {
       border-color: #766a2d; }
 
 .mdc-card {
-  padding: 1rem;
   margin: 1rem 1rem 4rem;
   border-radius: 4px;
   background-color: white;
@@ -1170,14 +1169,19 @@ section h2 {
   .mdc-card--header {
     padding: 1.5rem;
     color: #495b74;
+    background-color: #f8f9fa;
     border-bottom: 1px solid #dee2e6;
     margin-bottom: 1rem; }
-  .mdc-card--body img {
-    display: block;
-    width: 100%;
-    margin: auto;
-    height: auto;
+    .mdc-card--header img {
+      display: block;
+      width: 100%;
+      margin: auto;
+      height: auto;
+      padding: 1rem; }
+  .mdc-card--body {
     padding: 1rem; }
+    .mdc-card--body h3 {
+      margin-bottom: 1.5rem; }
   .mdc-card--footer {
     border-top: 1px solid #dee2e6;
     margin-top: 1rem;
