--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,47 +1,47 @@
 .mdc {
+    &-card {
+        // padding: 1rem;
+        margin: 1rem 1rem 4rem;
+        border-radius: 4px;
+        background-color: $white;
+        position: relative;
+        display: flex;
+        flex-flow: column nowrap;
 
-  &-card {
-    // padding: 1rem;
-    margin: 1rem 1rem 4rem;
-    border-radius: 4px;
-    background-color: $white;
-    position: relative;
-    display: flex;
-    flex-flow: column nowrap;
+        &--outlined {
+            -webkit-box-shadow: 0px 2px 2px 1px $gray-100;
+            box-shadow: 0px 2px 2px 1px $gray-100;
+            border: 1px solid $gray-300;
+        }
 
-    &--outlined {
-      -webkit-box-shadow: 0px 2px 2px 1px $gray-100; 
-      box-shadow: 0px 2px 2px 1px $gray-100;
-      border: 1px solid $gray-300;
+        &--header {
+            padding: 1.5rem;
+            color: $primary-300;
+            background-color: $gray-100;
+            border-bottom: 1px solid $gray-300;
+            margin-bottom: 1rem;
+
+            img {
+                display: block;
+                width: 100%;
+                max-width: 100%;
+                margin: auto;
+                height: auto;
+                padding: 1rem;
+            }
+        }
+
+        &--body {
+            padding: 1rem;
+            h3 {
+                margin-bottom: 1.5rem;
+            }
+        }
+
+        &--footer {
+            border-top: 1px solid $gray-300;
+            margin-top: 1rem;
+            padding: 1rem;
+        }
     }
-
-    &--header {
-      padding: 1.5rem;
-      color: $primary-300;
-      background-color: $gray-100;
-      border-bottom: 1px solid $gray-300;
-      margin-bottom: 1rem;
-
-      img {
-        display: block;
-        width: 100%;
-        margin: auto;
-        height: auto;
-        padding: 1rem;
-      }
-    }
-
-    &--body {
-      padding: 1rem;
-      h3 {
-        margin-bottom: 1.5rem;
-      }
-    }
-
-    &--footer {
-      border-top: 1px solid $gray-300;
-      margin-top: 1rem;
-      padding: 1rem;
-    }
-  }
 }
